k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service
  labels:
    app: profile-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-service
  template:
    metadata:
      labels:
        app: profile-service
    spec:
      containers:
        - name: profile-service
          image: k3d-bram:5000/profileservice:v0.1
          ports:
          - containerPort: 3000
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
