k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  labels:
    app: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: kweet.azurecr.io/gateway
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
