k8s/profile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
