k8s/profile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service
  labels:
    app: profile-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: profile-service
  template:
    metadata:
      labels:
        app: profile-service
    spec:
      containers:
        - name: profile-service
          image: k3d-bram:5000/profileservice:v0.2
          ports:
          - containerPort: 3000
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: profile-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
